# hubbo-sofa-web-application

./: .gitignore  DirectoryV3.xml  README.md
documents/: dev_rule.md  problems.md  simple_bench.md
documents/script/: system.sql
hubbo-parent/: DirectoryV3.xml  build.gradle.kts  gradle.properties  pom.xml  settings.gradle.kts
hubbo-parent/buildSrc/: build.gradle.kts  settings.gradle.kts
hubbo-parent/gradle/: libs.versions.toml
hubbo-parent/hubbo-annotations/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-auth/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-boot/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-common/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-configure/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-dal/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-dao/: pom.xml
hubbo-parent/hubbo-entity/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-integration/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-native/: Cargo.toml
hubbo-parent/hubbo-native-binding/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-native-invocation/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-native/src/: lib.rs
hubbo-parent/hubbo-native/src/compute/: mod.rs
hubbo-parent/hubbo-schueduler/: pom.xml
hubbo-parent/hubbo-service/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-service-facade/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-service-impl/: pom.xml
hubbo-parent/hubbo-test/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-utils/: build.gradle.kts  pom.xml
hubbo-parent/hubbo-web/: build.gradle.kts  pom.xml
script/: startup.sh
(+159 files in other folders)
